# eurorust-2023

./: .gitignore  README.md  build.sh  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js  worker-configuration.d.ts  wrangler.toml
__tests__/: async.test.ts  errors.test.ts  io.test.ts  panic.test.ts
d1/: schema.sql
rust/: Cargo.toml
rust/demo-async/: Cargo.toml
rust/demo-async/src/: lib.rs
rust/demo-errors/: Cargo.toml
rust/demo-errors/src/: lib.rs
rust/demo-io/: Cargo.toml
rust/demo-io/src/: advanced.rs  lib.rs  simple.rs
rust/demo-panic/: Cargo.toml
rust/demo-panic/src/: lib.rs
rust/query-engine/: Cargo.toml
rust/query-engine/src/: lib.rs
src/: query-local.ts  worker.ts
src/router/: event.ts  index.ts
src/utils/: WasmPanicRegistry.ts  getWasmPanicError.ts  isWasmPanic.ts
src/wasm/: .gitignore
