[package]
name = "demo-io"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# build a C-style shared library that can be dynamically loaded by a JavaScript runtime
crate-type = ["cdylib"]
name = "demo_io"

[dependencies]
serde = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys = { workspace = true }
async-trait = { workspace = true }
serde-wasm-bindgen = "0.6.0"
