[package]
name = "query-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# build a C-style shared library that can be dynamically loaded by a JavaScript runtime
crate-type = ["cdylib"]
name = "query_engine"

[dependencies]
async-trait = { workspace = true }
js-sys = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
tsify = { workspace = true }
serde-wasm-bindgen = "0.6.0"
ducktor = "0.1.0"
wasm-logger = "0.2.0"
log = "0.4.20"
